--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:20-alpine
 WORKDIR /app
+# Sao chép package.json và package-lock.json (nếu có)
 COPY package*.json ./
 RUN npm install
 COPY . .
 EXPOSE 3001
-CMD ["node", "index.js"]
+CMD ["npm", "start"]
