--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,15 @@
 version: '3.8'
 services:
-  frontend:
-    build:
-      context: ./frontend
-    ports:
-      - "80:80"
-    depends_on:
-      - backend
-    volumes:
-      - ./media:/usr/share/nginx/html/media
-
   backend:
     build:
       context: ./backend
     ports:
       - "3001:3001"
     volumes:
+      - ./backend:/app
       - ./media:/app/media
     environment:
-      - MONGO_HOST=mongodb
+      - MONGO_URI=mongodb://mongodb:27017/yourDatabaseName
     depends_on:
       - mongodb
 
